@@ -2,12 +2,12 @@ group 'unh-ai'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'application'
-apply plugin: 'excelsiorJet'
+apply plugin: 'kotlin'
 apply plugin: 'kotlinx-serialization'
 apply plugin: "org.jetbrains.kotlin.jvm"
 
 applicationDefaultJvmArgs = [
-        "-server", "-XX:+AggressiveOpts", "-ea", //"–XX:+UseG1GC",
+        "-server", "-ea", //"–XX:+UseG1GC",
         "-Xms10g",
         "-Xmx10g"
 ]
@@ -15,23 +15,21 @@ applicationDefaultJvmArgs = [
 if (project.hasProperty("mainClass")) {
     mainClassName = mainClass
 } else {
-    mainClassName = "edu.unh.cs.ai.realtimesearch.RealTimeSearchKt"
+    mainClassName = "edu.unh.cs.searkt.SearKt"
 }
 
 buildscript {
 
-    ext.kotlin_version = '1.2.40'
-    ext.serialization_version = '0.4.2'
+    ext.kotlin_version = '1.3.20'
+    ext.serialization_version = '0.10.0'
 
     repositories {
-        mavenCentral()
-        maven { url "https://kotlin.bintray.com/kotlinx" }
+        jcenter()
     }
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlinx:kotlinx-gradle-serialization-plugin:$serialization_version"
-        classpath 'com.excelsiorjet:excelsior-jet-gradle-plugin:1.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
@@ -41,14 +39,11 @@ repositories {
 }
 
 dependencies {
+    compile group: 'com.carrotsearch', name: 'hppc', version: '0.5.0'
+
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "org.jetbrains.kotlin:kotlin-reflect"
     compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
-
-    compile 'commons-cli:commons-cli:1.3.1'
-
-    compile 'org.slf4j:slf4j-api:1.7.25'
-    compile 'org.slf4j:slf4j-nop:1.7.25'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
@@ -80,22 +75,4 @@ jar {
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
-}
-
-excelsiorJet {
-    mainClass = mainClassName
-}
-
-task clientJar(type: Jar) {
-    manifest {
-        //noinspection GroovyAssignabilityCheck
-        attributes 'Main-Class': 'edu.unh.cs.ai.realtimesearch.experiment.network.RealTimeSearchClientApplicationKt'
-    }
-    baseName = project.name + '-client'
-
-
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    with jar
 }
